--- a/linked-data-outline.org
+++ b/linked-data-outline.org
@@ -1,370 +1,772 @@
-* Linked Data and REST
-  :PROPERTIES:
-  :subtitle: How can we finally get some REST?
-  :END:
-** Thesis 
-* Linked Data and REST
-** Explain the talk
-   :PROPERTIES:
-   :title: [[http://linkeddata.org/][Linked Data]] and [[https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm][REST]]
-   :END:
+What story to I want to tell?
+* DONE Linked Data and REST
+  CLOCK: [2014-03-03 Mon 19:47]--[2014-03-03 Mon 20:00] =>  0:13
+  CLOCK: [2014-03-03 Mon 18:46]--[2014-03-03 Mon 19:11] =>  0:25
+  CLOCK: [2014-03-03 Mon 18:38]--[2014-03-03 Mon 18:44] =>  0:06
+  CLOCK: [2014-03-03 Mon 18:04]--[2014-03-03 Mon 18:29] =>  0:25
+** DONE What is this
 
-** Introduce myself
-   :PROPERTIES:
-   :title: [[http://linkeddata.org/][Linked Data]] and [[https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm][REST]]
-   :subTitle: Who is <http://eric.themoritzfamily.com>
-   :END:
+For those who don't know me, I am Eric Moritz.  
 
-For people that don't know who I am, which may be many of you.  I am
-Eric Moritz.  I am currently the architect of the application services
-team at Gannett Digital.
+I am the architect on the application services team.
 
-One of the requirements of the application services team is to build
-interfaces between core and end user applications. These services need
-to iterate as quickly as the app developers need us to change.
+Application services sit on the public web between our backends and user facing
+applications.
 
-In addition to quick iteration, changes to services MUST not disrupt
-existing apps.
+Applications such as desktop web, mobile web and native mobile apps.
 
-** Explain what REST is
-   :PROPERTIES:
-   :title: The promise of RESTful Services
-   :image: {robot-talking-to-kid}
-   :END:
+Because of their nature, application services have some very strict requirements.
 
-These requirements lead me down a road of extensive research because
-current approaches to RESTful services do not meet these requirements.
+First, we must to be able to iterate as fast as frontend developers
+demand of us.
 
-When I went back to the specifications of RESTful services and I was
-surprised to learn that the original requirements of Web applications
-aligned with our goals.
+Second, because these services are used by multiple applications, 
+they must evolve without disturbing other applications.
 
-** WWW Application Domain requirements
+These requirements pose a challenge.
 
-I have to appologize; these requirements are in "architect" speak.
-I will try my best to translate them.
+Current approaches to RESTful services do not meet these requirements.
 
-** Low Entry-barrier
+Some research was obviously needed in order to build application services.
 
-"Hypermedia was chosen as the user interface because of its simplicity
-and generality: the same interface can be used regardless of the
-information source"
+This talk is my journey meet the requirements of application services.
 
-aka "Hypermedia drives the user interface"
+** DONE A journey through time and space
 
-Before I move onto the other requirements; Let me explain hypermedia
-and how it can drive different user agents.  If you are unaware,
-user agent is HTTP speak for a piece of software that acts on behalf
-of the user.  A user agent is Tron.
+Let me take you on a journey through time and space.  
 
-** The engine of application state...
+The time? sometime around 2005.  
 
-So you may have heard the phrase "Hypermedia as the engine of
-application state" or seen it as an acronym "HATEOAS". 
+The place, your desk. 
 
-If you haven't, don't worry. It is just something developers say to
-make you feel dumb.
+You're reading a blog post on RESTful services for the first time.  
 
-The concept is very simple. It is so simple that you shouldn't feel
-dumb because you already understand it if you have used the web.
+You read of a grand utopia.
 
-So the word "state" there is commonly misunderstood.  Most developers,
-including myself, when first introduced to hypermedia services
-automatically think that state is the application's data. This is
-because state and data are synonyms in software.
+One service can drive many user interfaces!  
 
-However, state in this context, does not mean data; it is the state
-that the application is in.  In this case the application is a "user
-agent", working on behalf of the user intention. Therefore state
-translates the state the user is in while using the application.
+Developers can iterate quickly without disruption!
 
-If you look at the diagram on the slide; you will see three different
-states that the user can be in.
+Things just work!  
 
-They'll start in the state of "Browsing the homepage" and notice a
-section that they want to start browsing. By clicking the section
-link, they transition to the state they want, the state of "browsing a
-section".  While browsing the section, they will find a story they
-want to read, click on the story and transition to the state that they
-want, which is reading a story.
+You go to bed that night, finally able to REST 
 
-This is simple; by now we understand it intuitively.
+knowing that there is a brave new world coming.
 
-** What HTML looks like to humans
+Fast forward to today.  
 
-We understand this intuitively, because of the most successfuly
-hypermedia format; HTML, the hypertext markup language.
+We are all building RESTful services.
 
-HTML work extremely well for human interaction and has done so
-since 1993.  Without HTML, we'd be out of a job.
+We are in the brave new world. 
 
-If you look at this slide, you'll see a rendering of our beautiful
-mobile site. A user will start the state of "Browsing our homepage", bring up the section
-list and decide to browse the life section.  By clicking on the link
-to the life section, the transition to the state they wanted, the
-state of "Browsing the life section".
+But this world is more dystopian than utopian. 
 
-Almost instantaneously, the will say, "OMG Katy Perry" and take her
-head to transition to the state of reading the story about Katy Perry.
+Servers are tightly coupled to single applications.
 
-This is hypermedia in a nutshell; it is simply a site map.  Hypermedia
-is how a web browser drives the interactions of a user.
+Developers are stuck with stiff and rigid data formats.
 
-Unfortunately despite HTML working so well for this kind of
-interactions, it only works in a web browser. If we wanted to use the
-same service to drive the interactions of a mobile app, we'd be
-forced to use a WebView. I can see you cringing out there.
+We try to REST, but we lose too much sleep over broken software
+and we still dream of a better world.
 
-So what is the answer if we want to drive any user agent with the same
-service?  We have to use a hypermedia format that exposes the raw
-data but still has the ability to direct the interactions of the user.
+Where did we go wrong? 
 
-** What User-Agents need
+Lets travel to the time and place were REST was first made public.
 
-What user agents need is something like this they need the raw data
-and hypermedia links to direct the interactions of the user.
-
-With this representation of the site map, we're able to drive desktop
-web, mobile web, android apps and iphone apps with the same service.
+** DONE In the year 2000
 
-All these user agents all have the same site map they start with an
-initial screen, allow the user to browse a section and allow the user
-to read a story.  
-
-The only difference is the way this data is presented to the user.
-That presentation could be native controls on a mobile device or HTML
-controls in a web browser. In fact, this raw data can drive any
-application that has the same site map.  We could use this service of
-a drive an app on a TV, or in a car with text to speech. We could even
-use the service to print a newspaper.  A newspaper has the same site
-map: frontpage, sections, stories.
-
-So this is why the hypermedia requirement is so important.  It allows
-us to drive many different user agents with the same service; cutting
-down on maintenance costs and operation costs.
-
-Lets move on to the other three requirement's; I promise that I won't
-take as long to explain them.
-
-** Extensibility
-
-Next, extensibility. When you have many different user agents using
-the same service, you don't have the luxury of upgrading all the
-clients with the service.  
-
-So any solution that services many different user agents, must be
-able to evolve without disruption of current users of the service.
-
-** Distributed Hypermedia
-
-So distributed hypermedia; for the life of me, I don't know why this
-is called "Distributed Hypermedia". When you read the text of the
-requirement, It is about user perceived latency.
-
-
-
-*** Explain what REST really is.
-    :PROPERTIES:
-    :title: The Church of REST...
-    :END:
-
-
-**** Low Entry-barrier
-     :PROPERTIES:
-     :title: The Church of REST...
-     :END:
-
-The basic gist of this requirement is that the barrier to entry for
-authorship and user must be low.
-
-"*Hypermedia* was chosen as the *user interface* because of its simplicity
-and generality" They chose it because it was the *same interface*
-regardless of information source. 
-
-We as developers have to build software that uses the same interface
-as much as possible.
-
-We missed this requirement hard.  Each service has its own unique JSON or
-XML format and there is never a common interface. 
-
-***** 
-      :PROPERTIES:
-      :url:http://www.ics.uci.edu/~fielding/pubs/dissertation/web_arch_domain.htm#sec_4_1_1
-      :citation: Fielding Dissertation 4.1.1
-      :type: Quote
-      :END:
-
-     “Hypermedia was chosen as the user interface because of its
-    simplicity and generality: the same interface can be used
-    regardless of the information source, the flexibility of
-    hypermedia relationships (links) allows for unlimited structuring,
-    and the direct manipulation of links allows the complex
-    relationships within the information to guide the reader through
-    an application.”
-    
-    [[http://www.ics.uci.edu/~fielding/pubs/dissertation/web_arch_domain.htm#sec_4_1_1][Fielding Dissertation 4.1.1]]
-
-**** Extensibility
-     :PROPERTIES:
-     :title: The Church of REST...
-     :END:
-     
-     Now, this quote, I will read:
-
-     "While simplicity makes it possible to deploy an initial
-     implementation of a distributed system, extensibility allows us
-     to avoid getting stuck forever with the limitations of what was
-     deployed."
-
-     Did that hit home for anyone? If your service has a "v1" and a
-     "v2" in the URL; you missed this requirement. Enough said.
-
-***** 
-      :PROPERTIES:
-      :url:http://www.ics.uci.edu/~fielding/pubs/dissertation/web_arch_domain.htm#sec_4_1_2
-      :citation: Fielding Dissertation 4.1.2
-      :type: Quote
-      :END:
-
-     “While simplicity makes it possible to deploy an initial
-     implementation of a distributed system, extensibility allows us
-     to avoid getting stuck forever with the limitations of what was
-     deployed.”
-    
-     [[http://www.ics.uci.edu/~fielding/pubs/dissertation/web_arch_domain.htm#sec_4_1_2][Fielding Dissertation 4.1.2]]
-
-**** Distributed Hypermedia
-     :PROPERTIES:
-     :title: The Church of REST...
-     :END:
-     
-     This requirement is strictly about cutting down user-perceived
-     latency of a resource.  This should be the <250ms constraint on
-     any Web application. 250ms is maximum latency a person perceives
-     as instantaneous. If your content isn't in front of user's eye
-     balls in less than 250ms, they'll think it is slow.  That isn't
-     an opinion, that is science.
-
-     This means that the "time to interaction" must be less than
-     250ms, but your service's data has to be ready for the user-agent
-     to display well before 250ms.  So the "time to last byte" 
-     250ms minus the time to render the content.
-
-     If you're not monitoring this stuff and being strict keeping
-     250ms time to interaction for 99% of your users, your users are
-     likely being annoyed.
-
-     I digressed a bit from this requirement to rant about a personal
-     crusade but I'll just say that this requirement in terms of web
-     services means we need to bundle as much data as possible to
-     service the request in under <250ms.
-
-     This requirement is also the caching requirement. Our user-agents
-     and services need to use HTTP caching effectively to drive down
-     this latency.  
-
-     This means, for the love of god, use conditional GETs to save on
-     processing and bandwidth...  A mobile device can be made to only
-     download content if it has changed and it is built into HTTP.
-
-**** Internet-scale
-     :PROPERTIES:
-     :title: The Church of REST...
-     :END:
-     
-     Web-scale, the punch line to many MongoDB jokes... Scale in this
-     case doesn't mean performance or the ability to services one
-     million clients concurrently. This requirement is the "data
-     sharing" requirement.  This requires that if I take data from
-     one service and use it in other service, no ids would collide
-     and the meaning behind fields would match up.
-
-     This is the requirement we are so far from reaching that we
-     should be fired for not meeting this requirement.
-
-     If building a RESTful service was building a tree house and this
-     requirement was equivalent to "put the house in a tree"; we put
-     the house underground.  That is how far we missed this
-     requirement.
-
-     In order to meet this requirement we have to meet two
-     sub-requirements.
-
-     First, Anarchic Scalability.  This is the sharing bit. "Most
-     software systems are created with the implicit assumption that
-     the entire system is under the control of one entity"
-
-     On the Internet, there is no one governing body that controls how
-     to structure your HTML.  You can do whatever you want as long as
-     we all agree on the semantics, or meaning of the tags in HTML.
-
-     This agreement on the meaning of the tags allows us to build
-     browsers that can display HTML in whatever way you determine fit.
-
-     This seems awesome right? Well we definitely have anarchy when
-     it comes to web services.  Everyone is creating their own ad-hoc
-     solution to a problem... That is fine, but we can share data.
-     We have to painstakingly explain what each field in our service
-     means and how the objects are related.  It is a mess.  Wouldn't
-     it be great of be had standard meanings for fields?
-
-     Second, Independent Deployment. This requirement gives us the
-     ability to deploy components of a distributed system
-     independently.  Meeting this requirement means that we can
-     deploy a service while the old client is still out there.
-
-     This requirement is a necessity when dealing with iPhones right?
-     We don't have the ability to deploy the client and service in
-     lockstep because Apple has control of the deployment of the
-     iPhone app.  So we have to carefully deploy our services without
-     breaking changes so that we don't disrupt the existing
-     application.  Wouldn't it be great of the technology we use
-     inherently had that property?  If we meet this requirement it
-     will.
-     
-**** Summarize the church of REST
-     :PROPERTIES:
-     :title: The church of REST...
-     :END:
-     
-
-*** Describe the current state of RESTful services
-
-    :PROPERTIES:
-    :title: The reality of "RESTful" services
-    :END:
-
-
-*** Explain what HATEOAS really is: a site map
-    :PROPERTIES:
-    :title: The engine of application state...
-    :END:
-**** What HTML looks like to humans
-**** What HTML looks like to computers
-**** What Computers actually need
-*** Summarize what REST is
-** Explain what we need to get to the one true REST
-*** JSON over HTTP: fail
-*** CSV over HTTP: fail
-*** XML over HTTP: fail
-***  XHTML/HTML over HTTP: fail for non-HTML user-agents
-*** RDFa+XHTML over HTTP: yay!
-*** Can RDF get us Hyphy?
-**** Low Entry barrier? 
-     All links, no control.
-****
-*** RDF+Hydra: yay!
-** Build a RESTful service
-*** Start with the interactions of the service
-*** Then build the site map
-*** Build an initial vocabulary
-*** Iterate on the vocab
-*** Mock the service with static files
-*** Tell the user-agent developers to get to work
-*** Iterate the mock with the user-agent developers to meet their requirements
-*** Make it dynamic.
-** Call to action
-  1. Use HTTP
-  2. Use Linked Data with Hydra
-  3. Monitor TTFB between services and TTI in the user-agents TTI
-     MUST be <250ms.
+We travel back to the year 2000.
+
+Roy T Fielding is publishing his dissertation on the architecture of the world wide web.
+
+In his dissertation, he states the requirements of a web application.
+
+** DONE Low Entry-barrier
+
+First, there must be a low barrier to entry. 
+
+Hypermedia was chosen as the user interface for its simplicity and generality.
+
+In order to have a low barrier to entry, the data format must be
+simple.
+
+Frontend developers must be able to mock the hypermedia service
+with static files just as easily as they can with HTML.
+
+The data format of application services must be general enough to
+drive both native apps and web sites.
+
+** DONE Extensibility
+
+If a service is driving both native apps and web sites, the
+technology *must* be extensible.
+
+We must be able to evolve the service without disturbing other user agents.
+
+If the mobile app team wants feature X, adding feature X must not
+break desktop web.
+
+If we can't do that we are not meeting this requirement of an
+application service.
+
+** DONE Low time to interaction
+*** DONE Slide
+*** DONE Text
+
+Because the service is driving the user interface, the time to
+interaction must be low.
+
+Research has shown that if the time to interaction is greater than
+250ms the interface feels laggy.
+
+If an application can not meet this requirement it is not a fun web
+application.
+
+250ms is the time to interaction but services must deliver payloads
+much faster than that.
+
+The application services team must monitor the latency of the network,
+the backend, the application service and the time to interaction.
+
+The application services team must place strict SLAs on the 95 and 99
+percentiles of each component of the stack.
+
+If these SLAs are violated the owner of the stack component must be
+notified.
+
+In addition, application services and clients must use HTTP caching
+effectively and correctly.
+
+HTTP caching must be as invisible to the developer as it is to a
+user.
+
+If we use caching and conditional GETs correctly, caching in
+applications become simple.
+
+Client developers will no longer need to worry about caching because
+their libraries will do it for them.
+
+When service implementors use HTTP caching correctly with conditional
+GETs we can cut down on unnecessary processing and wasted bandwidth.
+
+** DONE Internet-scale
+*** DONE Slides
+*** DONE Text
+Finally; a web application must be Internet scale.  
+
+Anarchic scalability means that we can share data in a distributed system.
+
+Anarchic scalability requires using global identifiers for objects and 
+property names.
+
+If we use global identifiers for objects and property names we can
+share data between the backend, application services and client
+applications regardless of how large.
+
+Independent Deployment means we can scale and deploy clients and
+servers independently.
+
+If we meet the requirement of independent deployment, frontend developers can
+work with mocked data independently of service implementors.
+
+To have Independent Deployment we must use a common language to
+communicate. 
+
+The common language of Web applications is HTML.
+
+Web browsers and web sites can be deployed independently because they
+use HTML.
+
+However, native applications need more.
+
+In order to drive native and web applications, application services
+need to a global hypermedia based language.
+
+** DONE Summary
+
+These are the requirements of a web application.  They are also the
+requirements of an application service.
+
+If we want to meet these requirements, what do we have to do?
+
+Lets examine a how a web application met these four requirements even
+in the year 2000.
+
+** DONE A true web application
+*** DONE Slides
+*** DONE Text    
+HTML was built from the ground up to meet these four requirements.
+
+How does HTML drive the user interface of multiple devices?
+
+Let us become the user. 
+
+First I want to browse stories about "Life, the Universe and
+Everything".
+
+So I tap on the life section link.
+
+The link transforms me into a user that is now browsing the life section.
+
+Immediately I say, "OMG Katy Perry" and tap on Katy Perry's face.
+
+The link transforms me into a user that is now reading a story
+about Katy Perry delivering a baby in someone's living room.
+
+This is how HTML, the hypertext markup language, uses hypermedia
+to drive the user interface.
+
+** DONE Computer says no.
+*** DONE Slides
+*** DONE Text
+Unfortunately this service can only drive HTML browsers.  
+
+If we wanted to use this service to drive a mobile app, 
+we would have to use a WebView.
+
+The native app only sees links between HTML documents.
+
+The native app has no knowledge of how to 
+turn the sections and stories into native components.
+
+This knowledge would have to be  hard coded into the app.
+
+When knowledge is hardcoded it becomes tightly coupled to the
+structure of the HTML.
+
+So, what do we need?
+
+Lets travel to the future and view source on an application
+that can drive both web sites and native applications.
+
+** DONE View Source
+*** DONE Slides
+*** DONE Text
+
+Be honored, by traveling to the future, you may be the 
+first person in history to see this.
+
+In our time, we've heard legends of services like this.
+
+Now, for the first time, we have documented proof of a future service
+that can do things that seem impossible in our time.
+
+We have a service that can drive both web sites *and* native applications.
+
+What you see here is the raw data needed for each user state.
+
+This raw data still has hypermedia links between the states so
+a user can transition from one state to the other.
+
+The raw data is typed with classes that the native application can use
+to create native UI components
+
+With this service we can drive desktop web, mobile web, mobile apps
+and any future user agents.  
+
+For instance, we could use this same service to build a TV app.  It
+is the same interactions but a different presentation.
+
+We could even use this service with an in dash system like Ford Sync.
+
+Again, same interactions, just a different presentation.
+
+We could even use this service to print a newspaper, A newspaper has
+the same interaction model albeit on dead trees. 
+
+Of course, in the future, this service does not drive such
+applications
+
+because TVs, cars and newspapers have been made obsolete by superior RESTful
+services.
+
+** DONE If these are the requirements
+*** DONE Slide
+*** DONE Text
+Now back to our current time. 
+
+If these are the requirements of this brave new world.
+
+How can we make progress towards this future.
+
+** DONE What is state?
+*** DONE Slide
+*** DONE Text
+
+The first thing we need to do is use the right definition
+of "state".
+
+When developers see the word "state" they immediately think data. So
+the industry assigned URLs to data and thought they were done.
+
+The definition of state in hypermedia is the state the user is in when
+using our application. Hypermedia is just a site map.
+
+So when developers misunderstand the definition of state, 
+
+we misunderstood the importance of hypermedia 
+and we ended up just having CRUD over HTTP and not REST.
+
+** DONE Choosing the wrong data model
+*** DONE Slides
+*** DONE Text
+The second thing the we need is a better data model.
+
+Clearly we need a way to express data that is independent of the
+service's chosen format.
+
+Just as before with our HTML service, when knowledge has to be hard
+coded into the app, the app becomes tightly coupled to structure of
+the data model.
+
+JSON and XML are both tree based data models.  
+
+The object relationships are based on the shape of the tree. 
+
+This means that clients are tightly coupled to the structure of the tree.
+
+If a service needs to add a relationship between two objects 
+it may drastically reshape the tree.
+
+If the structure of the tree drastically changes and the app is
+tightly coupled to the previous structure, the app will break.
+
+We also need a global data model.
+
+We need a data model that uses global identifiers for objects and
+terms.
+
+We need global identifiers in order to shared data in a distributed
+system such as a client and server.
+
+** DONE What can let us REST?
+*** DONE Slides
+*** DONE Text
+
+Armed with the requirements of a web application and our new found
+knowledge of a service from the future.
+
+Can we meet these requirements with existing tools?
+
+What can let us REST? 
+
+What can drive native and web user agents, evolve effortlessly, be
+responsive, and function at Internet scale?
+
+Let us examine different approaches and assign gold stars to the
+requirements that are met.  If we get all four gold stars, we have found
+our solution.
+
+** DONE Can JSON let us REST?
+*** DONE Slides
+*** DONE Text
+Can JSON let us REST?
+
+Can it drive both native and web user agents?
+
+JSON has no native ability to control any device, so nope.
+
+Can the service evolve? 
+
+It can evolve in a limited way. We can add fields easily to the
+objects but because it is tree based, we can't easily change
+relationships between objects.
+
+Is the UI responsive?  
+
+Sure, but this is the participation award. HTTP gives us caching for
+free. If we can download the objects in a single request we
+get this star.
+
+Is it web scale? 
+
+No, the field names are local to the document.
+
+If the tree is such a problem... let us take a cue from SQL and normalize. Let's try...
+
+** DONE Can CSV let us REST?
+*** DONE Slides
+*** DONE Text
+CSV.
+
+CSV obviously is not hypermedia, so no star there.
+
+Can the service evolve? 
+
+Yes it actually can evolve quite nicely.  
+
+We can add fields to the right without disrupting existing clients.
+
+We can even add new relationships between objects without disrupting
+existing clients. 
+
+Gold star for extensibility.
+
+Is the UI responsive?  
+
+No, because there are two different files.
+
+We have to make two HTTP requests to fetch them.
+
+This is additional network latency.
+
+Is it web scale? 
+
+Nope.  The field names are local.  
+
+They're even local to the files.
+
+The author id is called "id" in the author table but it is called
+"author_id" in the story table.
+
+Even within these two files there are two names for the same concept.
+
+So CSV is out, what else...
+
+** DONE Can XML let us REST?
+*** DONE Slides
+*** DONE Text
+XML, the extensible markup language.  The savior of data exchange.
+
+Can we drive the user interface? 
+
+Nope, no hypermedia in plain XML
+
+Can the service evolve?
+
+It is called the extensible markup language after all,
+
+but it is as extensible as JSON is.  
+
+We can add fields as much as we want. 
+
+However it is tree based as well, so the structure is rigid.
+
+Is the UI responsive?
+
+Sure, you get the participation award, good job XML.
+
+Is it web scale? 
+
+Finally we have a format that is web scale. 
+
+All the tags are namespaced, so they have global identifiers.  
+
+We can also deploy client and servers independently because of XML
+schemas.
+
+Almost there, lets try to find the last one and a half stars somewhere.
+
+** DONE Can HTML5 let us REST?
+*** DONE Slides
+*** DONE Text
+The solution to XML's complexity, HTML5, can we use it to finally get
+some REST?
+
+Can we drive user agents? 
+
+Well it is a hypertext markup language. Unfortunately we can only
+drive HTML agents.
+
+Can the service evolve? 
+
+Again, a tree based structure, half a star.
+
+Is it web scale?  
+
+We actually lost this star because the field names of the HTML5 data
+properties are local again.
+
+Crap, we last half a star; Lets keep the hypermedia and try one of
+those microdata things:
+
+** DONE Can RDFa+HTML5 let us REST?
+*** DONE Slides
+*** DONE Text
+
+RDFa+HTML5, can this let us REST?
+
+Can we drive multiple user agents? 
+
+Yes! We have both raw data and hypermedia links, so gold star.
+
+Can the service evolve? 
+
+Yes, the data model is no longer tree based. The RDF data model is
+graph based, we can freely add properties and relationships to objects
+without disrupting other clients
+
+Is the UI responsive? 
+
+Many objects in one HTTP response, check.
+
+Is it web scale? 
+
+Can we share data globally?
+
+Yes, the property names are global URIs
+
+Can we deploy the client and server independently? 
+
+Yes, RDF has vocabularies which can be the basis of independant
+development.
+
+We have our 4 stars, but can do use RDF without HTML5?
+
+** DONE Can RDF let us REST?
+*** DONE Slides
+*** DONE Talk
+
+If we get rid of HTML, Can we drive the UI with RDF?
+
+We lost links but all the rest is still there. Can we put Links back
+somehow?
+
+** DONE A wild Hydra appears!
+*** DONE Slides
+*** DONE Text
+Absolutely! Hydra is a vocabulary for RDF that lets us describe
+a hypermedia driven service.
+
+We can use Hydra to both drive HTML applications and native
+applications. We win.
+
+** DONE Not XML; please god no!
+*** DONE Slides
+*** DONE Text
+But isn't RDF XML? 
+
+Actually RDF is just a data model.  Saying RDF is XML is like saying
+a tree is XML.
+
+XML is just one way to serialize RDF.  So what is RDF then?
+
+** DONE Triples?
+*** DONE Slide
+*** DONE Text
+RDF is simply statements made about objects.  These statements are
+often called triples.
+
+They are made up of a subject, a predicate and an object just like an
+English sentence.  So when I say, "Eric has a bike", "Eric" is the
+subject, "has" is the predicate and "a bike" is the object.
+
+The subject and predicate are always global URIs.  The object can
+either be a URI, with establishes a relationship to another object or data such as
+a string.
+
+** DONE RDF is a graph 1
+*** DONE Slide
+*** DONE Text
+So these statement build an RDF graph.  The RDF graph is a directed
+graph that uses URI as its identifiers.
+
+The good thing about a graph is that relationships can be added
+without drastically changing the shape of the graph. 
+
+** DONE RDF is a graph 2
+*** DONE Slide
+*** DONE Text
+We just added a gannett:state relationship and the graph was
+mostly undisturbed.
+
+RDF also has the benefit of being normalized.  
+
+In JSON if we had two stories with the same author, that author object
+would be duplicated. This is not the case with RDF.
+
+This will reduce payload sizes and save us money.
+
+** DONE Can we finally get some REST?
+*** DONE Slide
+*** DONE Text
+So with the addition of Hydra, We can drive multiple user agents with
+a standard shared vocabulary.
+
+In additon, the RDF data model is extremely simple to understand.  
+
+It is just statements about objects. 
+
+If we understand the web, we understand graphs.
+
+So we have all four stars but we are just talking about a data model, not a data format.
+
+We could use XML to serialize the graph but that requires clients to use RDF.
+
+Is there a middle ground?
+
+** DONE JSON-LD
+*** DONE Slide
+*** DONE Text
+I wouldn't be asking that question if I didn't have an answers would I?
+
+JSON-LD is a middle ground between using RDF natively and JSON idomatically.
+
+With JSON-LD we can serialize an RDF graph, with all its wonderful properties,
+
+or we can use JSON-LD as idomatic JSON for clients that are unaware of RDF.
+
+This is great for retrofitting existing services without disturbing existing clients.
+
+Using JSON-LD meets the requirement of safe evolution while adopting
+Linked Data.
+
+** DONE Linked Data
+*** DONE Slides
+*** DONE Text
+So I have referred to Linked Data without actually defining it.
+
+A fairly recent development in RDF is the concept of linked data.
+
+Linked data is a set of constraints on RDF.
+
+These benevolent constraints were made to foster sharing and documentation
+
+While the goal is to build a large global database in the cloud; 
+
+we can use the same ideas internally in our own services and reap the same
+benefits.
+
+We use HTTP links for terms that point to the definition of that term.
+
+For instance, if you visit http://schema.org/Thing you will see the
+definition of the class Thing.
+
+This definition is both machine readable and human readable.
+
+When building an RDF vocabulary, we specify it in RDF itself.
+
+We can use this RDF graph to generate human readable documentation.
+
+Another term I have failed to define up to now is the meaning of a
+"Shared Vocabulary"; let me try to explain it.
+
+** DONE Shared Vocabulary
+*** DONE Slide
+*** DONE Text
+Did you know what a meme was when you first saw the word?  
+
+Did you even know how to pronounce it?  
+
+Did you call a me-me or a mem?
+
+You had to google it didn't you?  
+
+Once you googled it you learned what a meme was.
+
+Once you learned what a meme was you could talk about memes
+
+** DONE Shared Vocabulary 2
+*** DONE Slide
+*** DONE Text
+You could talk on Reddit about memes without soundly like an idiot.
+
+Not sounding like an idiot is an important thing.
+
+Computers need to not sound like idiots too.
+
+Computers need to use shared vocabularies
+
+Because if computers sound like idiots, they crash.
+
+** DONE Shared Vocabulary 3
+*** DONE Slide
+*** DONE Text
+A shared vocabulary is a set of properties and classes that define a
+problem domain.
+
+In the previous slide we used a schema.org vocabulary.
+
+schema.org is a collection of very general terms that make up a common
+shared vocabulary.
+
+There are a lot of public vocabularies out there.  
+
+A site called Linked Open Vocabularies has indexed over 400 public
+vocabularies.
+
+These are vocabularies that we can use when they match our problem
+domain.
+
+Public vocabularies are extremely important.
+
+They are important for the same reason why a common language is
+important.
+
+If we didn't have a common language, we'd live in the Tower of Babel.
+
+Without shared vocabularies we build distributed systems of Babel,
+full of confusion.
+
+** DONE Shared Vocabulary 3
+*** DONE slide
+*** DONE Text
+Lets build a vocabulary to describe objects in our most popular
+feed.
+
+First, we start with a public vocabulary.  We start with schema.org's
+CreativeWork class.
+
+Schema.org's CreativeWork class has everything we need to talk about
+any object in the most popular feed.
+
+All we have to do is define what is unique to our problem domain.  
+
+We define a gannett:Asset class which has an 'ssts' property.
+
+You'll notice that the "Right Now" feed is a hetrogenious list of
+assets.
+
+These assets can be videos, stories, photos, or some future unknown
+type.
+
+As long as all objects in the right now feed are schema:CreativeWork
+instances, 
+
+we can display it with its image and title without making any change
+to the template.
+
+This is very powerful. 
+
+In native application this is necessary if we want a library of
+generic GUI controls.
+
+For instance a ObjectiveC developers can make a control that is a
+generic list of schema:CreativeWork objects.
+
+These list controls are future proofed by the fact that all objects in
+the feed will always be schema:CreativeWork objects. 
+
+For safety sake, if any object in the feed is not of type
+schema:CreativeWork the client should ignore it just like an HTML
+browser ignores unknown tags.
+
+This is incredible, this is amazing.  This is the freaking future and
+it is 10 years old. Why are we not using it now?
+
+** DONE With Linked Data
+*** DONE Slide
+*** DONE Text
+I hope I was successful in expressing how important Linked Data is
+for building RESTful services.
+
+Linked Data lets us communicate about our data with clarity.
+
+We can describe the properties of our objects in certain terms.
+
+With JSON-LD we can retrofit existing services without disturbing
+existing clients.
+
+With global graphs we have the ability to evolve services safely.
+
+And finally with Hydra, we can describe hypermedia services in the
+clear language of linked data to drive any user agent.
+
+If I accomplished anything with this talk,
+
+I hope that I convince you to at least retrofit your services with JSON-LD
+
+So that you can give meaning to meaningless services
+
+** DONE We can finally get some REST
+and we can finally get *some* REST. Thank you.
+
